--- a/HTML_010_hello/sub1/layout9.html
+++ b/HTML_010_hello/sub1/layout9.html
@@ -37,8 +37,10 @@
       nav li:first-child:hover {
         background-color: rgb(89, 165, 189);
       }
+      /* flex 요소로서 여기서 부터
+      오른쪽 정렬하기 */
       nav li:nth-child(4) {
-        margin: 0 auto;
+        margin-left: 0 auto;
       }
       section {
         height: 90%;
