--- a/HTML_020_flex_layout/project.html
+++ b/HTML_020_flex_layout/project.html
@@ -4,23 +4,88 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="../reset.css" ref="stylesheet" />
     <title></title>
     <style>
-      section {
-        border: 1px solid #bbb;
+      * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
       }
-      section.h1 {
+      html,
+      body {
+        height: 100%;
+      }
+
+      #search {
+        margin: 10px;
+        border-width: 10px;
+      }
+      header {
+        background-color: rgb(184, 184, 184);
+        padding: 2rem;
+
+        height: 80px;
+
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+      }
+      li {
+        list-style: none;
+        text-align: right;
+        font-size: 10px;
+        font-weight: 200px;
+        list-style: none;
+        float: right;
+        line-height: normal;
+        vertical-align: middle;
+        text-align: center;
+        padding: 20px;
+      }
+      #topMenu {
+        height: 30px;
+        width: 850px;
+      }
+      #topMenu ul li {
+        list-style: none;
+        color: white;
+        background-color: #ffffff;
+        float: left;
+        line-height: 30px;
+        vertical-align: middle;
+        text-align: center;
+      }
+      #topMenu .menuLink {
+        text-decoration: none;
+        color: rgb(0, 0, 0);
+        display: block;
+        width: 150px;
+        font-size: 12px;
+        font-weight: bold;
+        font-family: fantasy;
       }
     </style>
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li>login</li>
+          <li>logout</li>
+        </ul>
+      </nav>
+      <div id="search"><h1>Title</h1></div>
+    </header>
     <section>
-      <h1>광주광역시 체육시설</h1>
+      <nav id="topMenu">
+        <ul>
+          <li><a class="menuLink" href="#">About us</a></li>
+          <li><a class="menuLink" href="#">Ministries</a></li>
+          <li><a class="menuLink" href="#">Community</a></li>
+          <li><a class="menuLink" href="#">Locations</a></li>
+          <li><a class="menuLink" href="#">Blog</a></li>
+        </ul>
+      </nav>
     </section>
-    <img
-      src="../HTML_020_flex_layout/체육일러스트배너.jpg"
-      width="100%"
-      height="50%"
-    />
   </body>
 </html>
