--- a/HTML_030_image/background_01.html
+++ b/HTML_030_image/background_01.html
@@ -45,7 +45,7 @@
         background-image: url("images_1\ \(3\).jpg");
         background-size: 100% 50%;
 
-        text-overflow: ;
+        text-overflow: 2px;
         display: flex;
         justify-content: center;
         align-items: center;
