--- a/project_my/test/search.html
+++ b/project_my/test/search.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -11,6 +10,7 @@
       margin: 0;
       padding: 0;
       border: 0;
+      box-sizing: border-box;
       font-size: 100%;
       font: inherit;
       vertical-align: baseline;
@@ -59,6 +59,11 @@
       letter-spacing: 5px;
     }
 
+    select.sports {
+      letter-spacing: 5px;
+      text-align-last: center;
+    }
+
     button {
       width: 20%;
       height: 40px;
@@ -71,11 +76,12 @@
     /* 여기서부터는 슬라이드 */
     div.section.input {
       display: none;
+      transition: 0.5s;
     }
 
-    div.section ul.slidewrap {
-      max-width: 1200px;
-      margin: 0px auto;
+    div.section div.slidewrap {
+      max-width: 1100px;
+      margin: 15px auto;
       overflow: hidden;
 
     }
@@ -83,12 +89,13 @@
     div.section ul.slidelist {
       white-space: nowrap;
       /* 줄바꿈 없애기  */
+
       font-size: 0;
     }
 
     div.section ul.slidelist>li {
       display: inline-block;
-      vertical-align: middle;
+      vertical-align: top;
       width: 100%;
       transition: all 0.5s;
     }
@@ -100,7 +107,8 @@
     }
 
     div.section ul.slidelist>li>a img {
-      width: 1000px;
+      width: 100%;
+      margin: 33px;
 
     }
 
@@ -114,34 +122,62 @@
 
     }
 
-    div ul.slidelist.left {
+    ul.slidelist label.left {
       left: 30px;
+      /* right:30px; */
+
       background: url("../image/left-arrow.png") center center / 100% no-repeat;
     }
 
-    div ul.slidelist.right {
+    ul.slidelist label.right {
       right: 30px;
+
       background: url("../image/right-arrow.png") center center / 100% no-repeat;
     }
 
-    select.sports {
-      letter-spacing: 5px;
-      text-align-last: center;
+    .section [id='slide01']:checked~.slidewrap .slidelist>li {
+      transform: translateX(0%);
     }
 
-    /* caption { // 표 제목 붙이기
-            padding: 10px;
-            margin-bottom: 20px;
-            font-size: 20px;
-        } */
+    .section [id='slide02']:checked~.slidewrap .slidelist>li {
+      transform: translateX(-100%);
+    }
+
+    .section [id='slide03']:checked~.slidewrap .slidelist>li {
+      transform: translateX(-200%);
+    }
+
   </style>
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       document.querySelector("button").addEventListener("click", (ev) => {
         location.href = "search_result.html";
       });
+
+      document.querySelector("input[name=ch_all]").addEventListener("change", function (e) {
+        e.preventDefault();
+        let list = document.querySelectorAll("input[name=ch]");
+        for (let i = 0; i < list.length; i++) {
+          list[i].checked = this.checked;
+        }
+      });
     });
 
+    function checkSelectAll() {
+      // 전체 체크박스
+      const checkbox = document.querySelectorAll('input[name="ch"]');
+      // 선택된 체크박스
+      const checked = document.querySelectorAll('input[name="ch"]:checked');
+      // select all 체크박스
+      const selectAll = document.querySelector('input[name="ch_all"]');
+
+      if (checkboxes.length === checked.length) {
+        selectAll.checked = true;
+      } else {
+        selectAll.checked = false;
+      }
+
+    }
   </script>
 </head>
 
@@ -165,19 +201,19 @@
         <input type="checkbox" name="ch" value="남구" /> 남구
         <input type="checkbox" name="ch" value="북구" /> 북구
         <input type="checkbox" name="ch" value="광산구" /> 광산구
-        <input id="all" type="checkbox" name="ch" value="전체" /> 전체
+        <input id="all" type="checkbox" name="ch_all" value="전체" onclick="selectAll" /> 전체
       </td>
     </tr>
     <tr>
       <th>지역(동)</th>
       <td id="t3">
-        <input type="search" size="20" style="padding: 10px; border: 1px solid #ddd" name="dong" />
+        <input type="text" size="20" style="padding: 10px; border: 1px solid #ddd" name="dong" />
       </td>
     </tr>
     <tr>
       <th>검색어</th>
       <td id="t4">
-        <input type="search" size="20" style="padding: 10px; border: 1px solid #ddd" name="search" />
+        <input type="text" size="20" style="padding: 10px; border: 1px solid #ddd" name="search" />
       </td>
     </tr>
     <tr>
@@ -185,8 +221,8 @@
       <th>종목</th>
       <td>
         <select class="sports" name="input" size="1" style="width: 230px; border: 1px solid #ddd">
-          <option value="1">종목</option>
-          <option value="2">2</option>
+          <option value="1">--- 종목 ---</option>
+          <option value="2">배드민턴</option>
           <option value="3">3</option>
           <option value="4">4</option>
         </select>
@@ -201,30 +237,32 @@
 
   <h1>검색 결과</h1>
   <div class="section">
-    <input type="radio" name="slide" id="slide1" checked>
-    <input type="radio" name="slide" id="slide2">
-    <input type="radio" name="slide" id="slide3">
+    <input class="slide" type="radio" name="slide" id="slide01" checked="">
+    <input class="slide" type="radio" name="slide" id="slide02">
+    <input class="slide" type="radio" name="slide" id="slide03">
 
     <div class="slidewrap">
       <ul class="slidelist">
         <li>
           <a>
             <label for="slide03" class="left"></label>
-            <img src="../image/city-5637906_1920.jpg" style="width: 300px; height: auto;">
+            <img src="../image/전대스포츠센터.png" style="width: 300px;">
+            <img src="../image/염주종합체육관.png" style="width: 300px;">
+            <img src="../image/첨단스포츠센터.png" style="width: 300px;">
             <label for="slide02" class="right"></label>
           </a>
         </li>
         <li>
           <a>
             <label for="slide01" class="left"></label>
-            <img src="../image/computer-1185626_1920.jpg" style="width: 300px; height: auto;">
+            <img src="../image/첨단스포츠센터.png">
             <label for="slide03" class="right"></label>
           </a>
         </li>
         <li>
           <a>
             <label for="slide02" class="left"></label>
-            <img src="/image/image.jpg" style="width: 300px; height: auto;">
+            <img src="../image/image.jpg">
             <label for="slide01" class="right"></label>
           </a>
         </li>
@@ -232,5 +270,14 @@
 
     </div>
   </div>
+</body>
+<script>
+      document.querySelector("input.slide").addEventListener("click", (ev) => {
 
-</html>
+        // let className = ev.target.className;
+        // if (className === "")
+
+          document.querySelector("#slide02").style.transform = "translateX(-100%)";
+
+      })
+</script>
