--- a/HTML_040_parallax/index.html
+++ b/HTML_040_parallax/index.html
@@ -20,7 +20,15 @@
         list-style: none;
       }
     </style>
-    <link href="css/section.css" rel="stylesheet" />
+    nav#main_nav { width: 100%; display: flex; position: absolute; top: 0;
+    z-index: 3; height: 70px; background-color: #fffcf0; } nav#main_nav h1 {
+    color: rgb(56, 56, 56); text-shadow: 1px 1px 1px; font-size: 40px;
+    font-weight: 900; padding: 0px 0px 5px 5px; margin: 5px; width: 20px;
+    box-sizing: border-box; text-align: center; font-family: "Roboto",
+    sans-serif; } nav#main_nav img { width: 70px; height: 50px; margin: 10px
+    10px 10px 60px; } nav#main_nav ul { right: 10px; position: absolute; } li {
+    list-style: none; } nav#main_nav li { float: left; padding: 20px 30px 0px
+    0px; color: rgb(0, 0, 0); }
     <link href="css/main_nav.css" rel="stylesheet" />
     <link href="css/dot_nav.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
