--- a/HTML_010_hello/sub1/layout.html
+++ b/HTML_010_hello/sub1/layout.html
@@ -15,6 +15,7 @@
         <p>sub2 div</p>
       </div>
     </div>
+
     <header>
       <h1>나의 홈페이지</h1>
     </header>
@@ -27,8 +28,8 @@
         <li>회원가입</li>
       </ul>
     </nav>
-    <section style="border: 1px silid red">
-      <article>
+    <section>
+      <article style="border: 1px solid blue">
         <h3>공지사항</h3>
         <p>inline style 지정</p>
         <p>tag 내부에 지정하는 style</p>
