--- a/HTML_010_hello/sub1/layout2.html
+++ b/HTML_010_hello/sub1/layout2.html
@@ -13,7 +13,7 @@
       nav#main_nav li {
         display: inline-block;
         padding: 5px;
-        /*
+        /* 
         hover에서 3px under bar를 표시했더니
         nav 전체가 출렁거리는 현상이 발생했다
         hover가 되기전 box에 transparent(투명색)으로
@@ -22,12 +22,13 @@
         border-bottom: 3px solid transparent;
         /*
         동적 모양 딜레이를 설정하여
-        애니매이션 효과를 주기
+        에니메이션 효과를 주기
         */
         transition: all 0.9s;
       }
       nav#main_nav li:hover {
         border-bottom: 3px solid yellow;
+        cursor: pointer;
       }
     </style>
   </head>
