--- a/HTML_010_hello/sub1/layout4.html
+++ b/HTML_010_hello/sub1/layout4.html
@@ -12,20 +12,24 @@
         border: 1px solid green;
         margin: 10px;
       }
-      /*
-       img를 포함하는 box의 overflow를 설정 
+
+      /* 
+      img를 포함하는 box의 overflow를 설정
       hidden : 이미지를 자르기
       scroll : 강제로(항상) 스크롤바를 보여주고
             box내에서 이미 확인
       auto : 이미지가 box보다 크면 scroll을 보이고
             그렇지 않으면 평소처럼 보이기
       */
+
       div#div1 {
         overflow: hidden;
       }
+
       div#div2 {
         overflow: scroll;
       }
+
       div#div3 {
         overflow: auto;
       }
@@ -33,6 +37,7 @@
       img {
         width: 500px;
       }
+
       /*
       img tag에 float 속성을 부여하면
       이후에 있는 본문이 이미지 주변을
@@ -43,6 +48,7 @@
         float: left;
         margin: 10px;
       }
+
       div#div5 img {
         width: 100px;
         margin: 10px;
@@ -51,30 +57,30 @@
   </head>
   <body>
     <div id="div1">
-      <img src="../2021.jpg" alt="2021 이미지" />
+      <img src="../2021.jpeg" alt="2021이미지" />
     </div>
     <div id="div2">
-      <img src="../2021.jpg" alt="2021 이미지" />
+      <img src="../2021.jpeg" alt="2021이미지" />
     </div>
     <div id="div3">
-      <img src="../2021.jpg" alt="2021 이미지" />
+      <img src="../2021.jpeg" alt="2021이미지" />
     </div>
     <div id="div4">
-      <img src="../2021.jpg" alt="2021 이미지" />
+      <img src="../2021.jpeg" width="50px" alt="2021이미지" />
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quia
-        atque optio ullam labore officia iste voluptatibus voluptates iusto
-        sint! Tempore, modi rem! Repellendus veniam nostrum possimus illo,
-        perspiciatis eius.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
+        aspernatur suscipit debitis, cumque consequatur temporibus minima
+        obcaecati rerum accusamus quidem dolorum non nisi aut ipsum amet
+        quisquam natus quam ipsam.
       </p>
     </div>
     <div id="div5">
-      <img src="../2021.jpg" alt="2021 이미지" />
+      <img src="../2021.jpeg" width="50px" alt="2021이미지" />
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quia
-        atque optio ullam labore officia iste voluptatibus voluptates iusto
-        sint! Tempore, modi rem! Repellendus veniam nostrum possimus illo,
-        perspiciatis eius.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
+        aspernatur suscipit debitis, cumque consequatur temporibus minima
+        obcaecati rerum accusamus quidem dolorum non nisi aut ipsum amet
+        quisquam natus quam ipsam.
       </p>
     </div>
   </body>
