--- a/HTML_010_hello/sub1/layout5.html
+++ b/HTML_010_hello/sub1/layout5.html
@@ -28,11 +28,13 @@
         padding: 2rem;
         float: left;
       }
+
       div#d1 {
         background-color: yellow;
       }
+
       div#d2 {
-        background-color: gray;
+        background-color: grey;
       }
     </style>
   </head>
