--- a/HTML_010_hello/sub1/layout7.html
+++ b/HTML_010_hello/sub1/layout7.html
@@ -7,23 +7,22 @@
     <title></title>
     <style>
       /* 일부 브라우저에서 지원이 되지 않는다 */
-      /* flex와 비슷한 성질로 내부 요소를 
-      inline으로 배치하고자 할때 사용
-      */
+      /* flex와 비슷한 성질로 내부 요소를
+      inline 으로 배치하고자 할때 사용 */
       body {
         display: grid;
         /* 
         한 라인에 배치할 요소들의 개수와
         폭을 지정하여 설정하기
         */
-        grid-template-columns: 100px 100px 100px 100px 100px 100px 100px;
+        grid-template-columns: 100px 100px 100px 100px 100px;
         grid-gap: 10px;
       }
 
       div {
         margin: 10px;
         padding: 2rem;
-        border: 1px solid rgb(155, 155, 243);
+        border: 1px solid blue;
       }
     </style>
   </head>
