--- a/HTML_010_hello/sub1/layout9.html
+++ b/HTML_010_hello/sub1/layout9.html
@@ -11,72 +11,22 @@
         margin: 0;
         padding: 0;
       }
-      header {
-        background-color: rgb(84, 185, 84);
-        color: white;
-        padding: 2rem;
-        text-shadow: 2px 2px 2px black;
-        text-align: center;
-      }
-      nav {
-        background-color: rgb(147, 147, 255);
-        color: white;
-      }
-      nav ul {
-        display: flex;
-        list-style-type: none;
-      }
-      nav li {
-        padding: 12px 16px;
-        cursor: pointer;
-      }
-      nav li:hover {
-        background-color: #ddd;
-        color: rgb(119, 119, 119);
-      }
-      nav li:first-child:hover {
-        background-color: rgb(89, 165, 189);
-      }
-      /* flex 요소로서 여기서 부터
-      오른쪽 정렬하기 */
-      nav li:nth-child(4) {
-        margin-left: 0 auto;
-      }
-      section {
-        height: 90%;
-        display: flex;
-      }
-      aside {
-        width: 20%;
-        background-color: rgb(255, 255, 255);
-      }
-      article {
-        width: 60%;
-        background-color: rgb(221, 221, 221);
-        overflow: auto;
-      }
-      footer {
-        background-color: rgb(63, 63, 63);
-        color: rgb(255, 255, 255);
-        padding: 0.5rem;
-      }
-      address {
-        text-align: center;
-      }
+
       /*
-      Web Browser의 화면은
-      Width 는 보여지는 영역으로 일정한 크기를 갖는다
+      Web browser의 화면은
+      width 는 보여지는 영역으로 일정한 크기를 갖는다
       하지만 height는 스크롤기능이 있어서
       일정한 크기가 설정되어 있지 않다
-      box의 width를 설정하면 
+      box의 width를 설정하면
       원하는 폭 만큼의 box를 만들수 있다
       하지만 height는 % 로 지정할때
-      기준이 되는 높이가 없어서 원하는 크기만큼
-      만들 수 없다
+      기준이되는 높이가 없어서
+      원하는 크기만큼  만들 수 없다
       그래서 초기에 html 전체의 높이를 지정해주고
-      그리고 이후에 다른 tag에 높이를 %로 지정할수 있다
+      그리고 이후에 다른 tag의 높이를 %로 지정할수
+      있다
 
-      현재 화면에서 
+      현재 화면에서
       화면을 가득채우는 layout을 설정하기 위해
       html의 height를 100%로 설정하였다
       */
@@ -84,11 +34,77 @@
         width: 100%;
         height: 100%;
       }
+
       body {
         width: 100%;
         height: 100%;
         display: flex;
         flex-flow: column;
+      }
+
+      header {
+        background-color: green;
+        color: white;
+        padding: 2rem;
+        text-shadow: 2px 2px 2px black;
+        text-align: center;
+      }
+
+      nav {
+        background-color: blue;
+        color: white;
+      }
+
+      nav ul {
+        display: flex;
+        list-style-type: none;
+      }
+
+      nav li {
+        padding: 12px 16px;
+        cursor: pointer;
+      }
+
+      nav li:hover {
+        background-color: #ddd;
+        color: black;
+      }
+
+      nav li:first-child:hover {
+        background-color: green;
+      }
+
+      /* 
+      flex 요소로서 여기서 부터
+      오른쪽 정렬하기
+      */
+      nav li:nth-child(4) {
+        margin-left: auto;
+      }
+
+      section {
+        flex: 1;
+        display: flex;
+      }
+
+      aside {
+        width: 20%;
+        background-color: #aaa;
+      }
+
+      article {
+        width: 60%;
+        overflow: auto;
+      }
+
+      footer {
+        background-color: black;
+        color: white;
+        padding: 0.5rem;
+      }
+
+      address {
+        text-align: center;
       }
     </style>
   </head>
@@ -99,7 +115,7 @@
     </header>
     <nav>
       <ul>
-        <li>HOME</li>
+        <li>Home</li>
         <li>나의 소개</li>
         <li>방명록</li>
         <li>로그인</li>
@@ -109,43 +125,57 @@
     <section>
       <aside>Left</aside>
       <article>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
-        <p>대한민국 만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
+        <p>대한민국만세</p>
       </article>
       <aside>Right</aside>
     </section>
     <footer>
-      <address>CopyRight &copy;num5268@gmail.com</address>
+      <address>CopyRight &copy; callor@callor.com</address>
     </footer>
   </body>
 </html>
